# pylogfig

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
pylogfig/: main.py
pytomfig/: __init__.py  main.py
