[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pylogfig_Sluke950"
version = "0.0.1"
authors = [
  { name="Luke Shuttleworth", email="Sluke950@gmail.com" },
]
description = "Configuration file manager."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Sluke950/pylogfig"
Issues = "https://github.com/Sluke950/pylogfig/issues"